[package]
name = "hidden_features"
version = "0.1.0"
authors = ["Scott Piriou <scott@parity.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.6"
regex = "1.3.9"
lazy_static = "1.4.0"
structopt = "0.3.14"
walkdir = "2.3.1"